# advent_of_code

./: Cargo.toml  README.md  build.rs
advent/: Cargo.toml
advent/src/: main.rs
advent2015/: Cargo.toml
advent2015/src/: day1.rs  main.rs
advent2020/: Cargo.toml
advent2020/src/: main.rs
advent2021/: Cargo.toml
advent2021/benches/: day21_bench.rs
advent2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
advent2022/: Cargo.toml  build.rs
advent2022/data/: input_21_2.txt
advent2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  list.l  list.rs  main.rs
advent2023/: Cargo.toml
advent2023/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
data/2023/: 12_test2.txt  12_test3.txt  18_test2.txt
src/: build.rs  lib.rs  main.rs
src/year2015/: day1.rs  day2.rs
src/year2016/: day1.rs  mod.rs
src/year2020/: day1.rs  mod.rs
src/year2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year2022/: day1.rs  (+26 more)
(+54 files in other folders)
