[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bit_range = "0.1.0"
bitfield = "0.14.0"
clap = {version = "4.4.11", features = ["derive"] }
lrlex = "0.13.3"
lrpar = "0.13.3"
num = "0.4.1"
regex = "1.10.2"
