[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lrpar = "0.12"
lrlex = "0.12"
cfgrammar = "0.12"
regex = "1.7"
bitfield = "0.14"
num = "0.4"

[build-dependencies]
lrlex = "0.12"
cfgrammar = "0.12"
